feat: production improvements

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Documentation for the Snkr Magnet API / Documentação da API Snkr Magnet">
     <meta name="author" content="JeanCSF">
     <meta name="revision" content="1.0">
-    <title>Snkr Magnet API</title>
+    <title>SNKR MAGNET API</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
