--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="SNKR MAGNET" />
+    <meta name="keywords" content="SNKR MAGNET">
+    <meta name="author" content="JeanCSF">
     <title>SNKR MAGNET</title>
   </head>
   <body class="dark:bg-gray-900 dark:text-white">
