--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SNKR MAGNET" />
-    <meta name="keywords" content="SNKR MAGNET">
-    <meta name="author" content="JeanCSF">
-    <title>SNKR MAGNET</title>
-  </head>
-  <body class="dark:bg-gray-900 dark:text-white">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/ico" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="O maior indexador de sneakers do Brasil" />
+  <meta name="author" content="JeanCSF" />
+  <meta name="keywords" content="sneakers, tênis, indexador, Brasil, SNKR MAGNET" />
+  <meta property="og:title" content="SNKR MAGNET" />
+  <meta property="og:description" content="O maior indexador de sneakers do Brasil" />
+  <meta property="og:image" content="/favicon.ico" />
+  <meta property="og:url" content="https://www.snkrmagnet.com.br" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SNKR MAGNET" />
+  <meta name="twitter:description" content="O maior indexador de sneakers do Brasil" />
+  <meta name="twitter:image" content="/favicon.ico" />
+  <link rel="canonical" href="https://www.snkrmagnet.com.br/" />
+  <title>SNKR MAGNET - O maior indexador de sneakers do Brasil</title>
+
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.snkrmagnet.com.br/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.snkrmagnet.com.br/buscar/{search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+      </script>
+</head>
+
+<body class="dark:bg-gray-900 dark:text-white">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
